<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.dylansymons.rpsduel.WelcomeActivity">

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/namePrompt"
        android:layout_alignLeft="@+id/namePrompt"
        android:layout_alignRight="@+id/namePrompt"
        android:layout_alignStart="@+id/namePrompt"
        android:layout_centerInParent="true"
        android:hint="@string/name_hint"
        android:inputType="textPersonName|textCapWords" />

    <TextView
        android:id="@+id/namePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nameInput"
        android:layout_centerHorizontal="true"
        android:text="@string/name_prompt"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/nameSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameInput"
        android:layout_centerHorizontal="true"
        android:text="@string/ok" />

</RelativeLayout>
