<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.dylansymons.rpsduel.StatsActivity">

    <TextView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/logInView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_google_prompt" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/plus_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/statsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/points"
            android:layout_marginEnd="@dimen/label_padding"
            android:layout_marginRight="@dimen/label_padding" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/points"
            android:layout_toEndOf="@+id/level"
            android:layout_toRightOf="@+id/level" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/level" />

        <TextView
            android:id="@+id/wins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:layout_marginEnd="@dimen/label_padding"
            android:layout_marginRight="@dimen/label_padding"
            android:text="@string/wins_label" />

        <TextView
            android:id="@+id/wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_toEndOf="@+id/wins_label"
            android:layout_toRightOf="@+id/wins_label" />

        <TextView
            android:id="@+id/losses_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/wins_label"
            android:layout_marginEnd="@dimen/label_padding"
            android:layout_marginRight="@dimen/label_padding"
            android:text="@string/losses_label" />

        <TextView
            android:id="@+id/losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wins"
            android:layout_toEndOf="@+id/losses_label"
            android:layout_toRightOf="@+id/losses_label" />

    </RelativeLayout>

</LinearLayout>
